# hcount

./: .gitignore  .hlint.yaml  cabal.project  hcount.cabal  hie.yaml  readme.md  readme.org  stack.yaml
app/: hcount.hs
test/: test.hs
