cabal-version: 2.4
name:          hcount
version:       0.0.1
synopsis: Haskell name counts.
description: Counting of Haskell names and artifacts usage.
category: project
author: Tony Day
maintainer: tonyday567@gmail.com
copyright: Tony Day (c) AfterTimes
license: BSD-3-Clause
homepage: https://github.com/tonyday567/hcount#readme
bug-reports: https://github.com/tonyday567/hcount/issues
build-type: Simple
source-repository head
  type: git
  location: https://github.com/tonyday567/hcount

common ghc-options-stanza
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wpartial-fields
        -Wredundant-constraints

    if impl ( ghc >= 8.8 )
        ghc-options:
            -fwrite-ide-info
            -hiedir=.hie

common ghc2021-stanza
    if impl ( ghc >= 9.2 )
        default-language: GHC2021

    if impl ( ghc < 9.2 )
        default-language: Haskell2010
        default-extensions:
            BangPatterns
            BinaryLiterals
            ConstrainedClassMethods
            ConstraintKinds
            DeriveDataTypeable
            DeriveFoldable
            DeriveFunctor
            DeriveGeneric
            DeriveLift
            DeriveTraversable
            DoAndIfThenElse
            EmptyCase
            EmptyDataDecls
            EmptyDataDeriving
            ExistentialQuantification
            ExplicitForAll
            FlexibleContexts
            FlexibleInstances
            ForeignFunctionInterface
            GADTSyntax
            GeneralisedNewtypeDeriving
            HexFloatLiterals
            ImplicitPrelude
            InstanceSigs
            KindSignatures
            MonomorphismRestriction
            MultiParamTypeClasses
            NamedFieldPuns
            NamedWildCards
            NumericUnderscores
            PatternGuards
            PolyKinds
            PostfixOperators
            RankNTypes
            RelaxedPolyRec
            ScopedTypeVariables
            StandaloneDeriving
            StarIsType
            TraditionalRecordSyntax
            TupleSections
            TypeApplications
            TypeOperators
            TypeSynonymInstances

executable hcount
  import: ghc-options-stanza
  import: ghc2021-stanza
  main-is: hcount.hs
  hs-source-dirs: app
  build-depends:
    bytestring,
    directory,
    dir-traverse,
    optics-core,
    string-interpolate,
    process,
    flatparse,
    base >= 4.7 && < 5,
    containers >= 0.6 && < 0.8,
    ghc >= 8.10 && < 9.10,
    numhask >= 0.7 && < 0.13,
    optparse-applicative >= 0.15 && < 0.19,
    pretty-simple >=4.1 && <4.2,
    filepath
