cabal-version: 3.0
name:          hcount
version:       0.0.2
synopsis: Haskell artifact name counts.
description: Counting of Haskell names and artifacts usage.
category: project
author: Tony Day
maintainer: tonyday567@gmail.com
copyright: Tony Day (c) 2024
license: BSD-3-Clause
homepage: https://github.com/tonyday567/hcount#readme
bug-reports: https://github.com/tonyday567/hcount/issues
build-type: Simple
source-repository head
  type: git
  location: https://github.com/tonyday567/hcount

common ghc-options-stanza
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wpartial-fields
        -Wredundant-constraints

common ghc2021-stanza
    default-language: GHC2021

executable hcount
  import: ghc-options-stanza
  main-is: hcount.hs
  hs-source-dirs: app
  default-language: GHC2021
  build-depends:
    base >= 4.7 && < 5,
    bytestring >= 0.11 && < 0.13,
    circuits >=0.1 && <0.2,
    circuits-parser >=0.1 && <0.2,
    containers >= 0.6 && < 0.8,
    dir-traverse >= 0.2.3 && < 0.3,
    directory >= 1.3 && < 1.4,
    filepath >= 1.4 && < 1.6,
    ghc >= 8.10 && < 9.10,
    optics-core >= 0.4.1 && < 0.5,
    optparse-applicative >= 0.15 && < 0.19,
    process >= 1.6.18 && < 1.7,
    text >= 1.2 && < 2.2,
